--- a/index.html
+++ b/index.html
@@ -43,5 +43,6 @@
 	
 	
     <!-- Tämä on kommentti, se ei näy HTML sivulla, sitä käytetään sisällön kommentointiin muita ylläpitäjiä ja itseä varten. lisää tähän HTML harjoitus.docx:stä sisältöä -->
+		</div>
 	</body>
 </html>
